trying to connect css

--- a/html/shaecarnahan.html
+++ b/html/shaecarnahan.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="/css/index.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
     <script src="/javascript/updatedpage.js"></script>
     <title>Shae Carnahan | Portfolio</title>
 
@@ -17,17 +17,17 @@
     </header>
     <main>
         <h2>Portfolio</h2>
-        <div>
+        <div class="card">
             <h3>
                 Graphic Design
             </h3>
             <ul>
                 <li>
-                    <a href="https://www.behance.net/shaecarnahan1">https://www.behance.net/shaecarnahan1</a>
+                    <a href="https://www.behance.net/shaecarnahan1">Behance publishes</a>
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="card">
             <h3>
                 UX/UI Design
             </h3>
@@ -40,7 +40,7 @@
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="card">
             <h3>
                 Webpages
             </h3>
@@ -59,13 +59,12 @@
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="card">
             <h3>
                 Coding
             </h3>
             <ul>
                 <li>
-                    <h4>Javascript:</h4>
                     <li>
                         <a href="/javascriptprojects/mealplanner/final.html">Meal Planner</a>
                     </li>
@@ -75,6 +74,7 @@
                 </li>
             </ul>
         </div>
+        <br>
     </main>
     <footer>
         <p class='copyright'>&copy; <span id='copyrightyear'></span> | Shae Carnahan | Rexburg Idaho | <a href='https://www.byui.edu/online'>BYUI Online Learning</a> 
