correction on image

--- a/html/shaecarnahan.html
+++ b/html/shaecarnahan.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img class='picture' src="/images/shae.png" alt="Shae Carnahan">
+        <img class='picture' src="../images/shae.png" alt="Shae Carnahan">
         <h1>Shae Carnahan</h1>
     </header>
     <main>
