trying to add pdfs

--- a/html/shaecarnahan.html
+++ b/html/shaecarnahan.html
@@ -23,7 +23,7 @@
             </h3>
             <ul>
                 <li>
-                    <a href="https://www.behance.net/shaecarnahan1">Behance publishes</a>
+                    <a href="https://www.behance.net/shaecarnahan1" target="_blank">Behance publishes</a>
                 </li>
             </ul>
         </div>
@@ -33,10 +33,10 @@
             </h3>
             <ul>
                 <li>
-                    <a href="/projects/class-shae-carnahan-calculator-project-final.pdf">Calculator Project </a>
+                    <a href="/projects/class-shae-carnahan-calculator-project-final.pdf" target="_blank" type="application/pdf">Calculator Project </a>
                 </li>
                 <li>
-                    <a href="/projects/art337R-shae-carnahan-website-project-final.pdf">Loup County Website </a>
+                    <a href="/projects/art337R-shae-carnahan-website-project-final.pdf" target="_blank" type="application/pdf">Loup County Website </a>
                 </li>
             </ul>
         </div>
@@ -46,16 +46,16 @@
             </h3>
             <ul>
                 <li>
-                    <a href="https://nonprofit.shaecarnahan.com/">Thanksgiving Nonprofit</a>
+                    <a href="https://nonprofit.shaecarnahan.com/" target="_blank">Thanksgiving Nonprofit</a>
                 </li>
                 <li>
-                    <a href="https://shaemc.github.io/semester7/finalproject/home.html">Temple Inns and Suites</a>
+                    <a href="https://shaemc.github.io/semester7/finalproject/home.html" target="_blank">Temple Inns and Suites</a>
                 </li>
                 <li>
-                    <a href="https://full-curved-pheasant.glitch.me/">White Willow Earrings</a>
+                    <a href="https://full-curved-pheasant.glitch.me/" target="_blank">White Willow Earrings</a>
                 </li>
                 <li>
-                    <a href="https://shae-carnahan.glitch.me/">Dry Oar Rafting</a>
+                    <a href="https://shae-carnahan.glitch.me/" target="_blank">Dry Oar Rafting</a>
                 </li>
             </ul>
         </div>
@@ -66,10 +66,10 @@
             <ul>
                 <li>
                     <li>
-                        <a href="/javascriptprojects/mealplanner/final.html">Meal Planner</a>
+                        <a href="/javascriptprojects/mealplanner/final.html" target="_blank">Meal Planner</a>
                     </li>
                     <li>
-                        <a href="/javascriptprojects/enrollstudents/week4.html">Enrolling Students</a>
+                        <a href="/javascriptprojects/enrollstudents/week4.html" target="_blank">Enrolling Students</a>
                     </li>
                 </li>
             </ul>
@@ -77,7 +77,7 @@
         <br>
     </main>
     <footer>
-        <p class='copyright'>&copy; <span id='copyrightyear'></span> | Shae Carnahan | Rexburg Idaho | <a href='https://www.byui.edu/online'>BYUI Online Learning</a> 
+        <p class='copyright'>&copy; <span id='copyrightyear'></span> | Shae Carnahan | Rexburg Idaho</a> 
         </p>
         <p class='highlighted'>Last updated: <span id='lastupdated'></span></p>
     </footer>
