--- a/html/shaecarnahan.html
+++ b/html/shaecarnahan.html
@@ -33,10 +33,10 @@
             </h3>
             <ul>
                 <li>
-                    <a href="/projects/class-shae-carnahan-calculator-project-final.pdf" target="_blank" type="application/pdf">Calculator Project </a>
+                    <a href="/calculatorproject.html" target="_blank">Calculator Project </a>
                 </li>
                 <li>
-                    <a href="/projects/art337R-shae-carnahan-website-project-final.pdf" target="_blank" type="application/pdf">Loup County Website </a>
+                    <a href="/projects/art337R-shae-carnahan-website-project-final.pdf" target="_blank">Loup County Website </a>
                 </li>
             </ul>
         </div>
