--- a/html/shaecarnahan.html
+++ b/html/shaecarnahan.html
@@ -33,7 +33,7 @@
             </h3>
             <ul>
                 <li>
-                    <a href="/calculatorproject.html" target="_blank">Calculator Project </a>
+                    <a href="calculatorproject.html" target="_blank">Calculator Project </a>
                 </li>
                 <li>
                     <a href="/projects/art337R-shae-carnahan-website-project-final.pdf" target="_blank">Loup County Website </a>
