--- a/html/calculatorproject.html
+++ b/html/calculatorproject.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css"/>
     <link rel="stylesheet" href="../css/normalize.css"/>
-    <title>Document</title>
+    <title>Calculator Project</title>
 </head>
 <body>
 <embed src="/projects/class-shae-carnahan-calculator-project-final.pdf" type="application/pdf" />
