--- a/html/calculatorproject.html
+++ b/html/calculatorproject.html
@@ -9,6 +9,14 @@
     <title>Calculator Project</title>
 </head>
 <body>
-<embed src="/projects/class-shae-carnahan-calculator-project-final.pdf" type="application/pdf" />
+    <header>
+        <h1>Calculator Application</h1>
+    </header>
+<main>
+    <embed src="/projects/class-shae-carnahan-calculator-project-final.pdf" type="application/pdf" />
+</main>
+<footer>
+    <!-- this is a footer -->
+</footer>
 </body>
 </html> 
