adding html for pdfs

--- a/html/calculatorproject.html
+++ b/html/calculatorproject.html
@@ -13,7 +13,7 @@
         <h1>Calculator Application</h1>
     </header>
 <main>
-    <embed src="/projects/class-shae-carnahan-calculator-project-final.pdf" type="application/pdf" />
+    <embed src="../projects/class-shae-carnahan-calculator-project-final.pdf" type="application/pdf" />
 </main>
 <footer>
     <!-- this is a footer -->
