--- a/html/shaecarnahan.html
+++ b/html/shaecarnahan.html
@@ -36,7 +36,7 @@
                     <a href="../html/calculatorproject.html" target="_blank">Calculator Project </a>
                 </li>
                 <li>
-                    <a href="/projects/art337R-shae-carnahan-website-project-final.pdf" target="_blank">Loup County Website </a>
+                    <a href="loupcounty.html" target="_blank">Loup County Website </a>
                 </li>
             </ul>
         </div>
