fixed my pdf pages!

--- a/html/loupcounty.html
+++ b/html/loupcounty.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/normalize.css"/>
     <link rel="stylesheet" href="../css/index.css"/>
+    <script src="../javascript/updatedpage.js"></script>
+
     <title>Document</title>
 </head>
-<body>
+<body class="pdf">
     <header>
         <h1>Loup County Webpage</h1>
     </header>
     <main>
-
+        <embed src="../projects/art337R-shae-carnahan-website-project-final.pdf" type="application/pdf" />
     </main>
     <footer>
-
+        <p class='copyright'>&copy; <span id='copyrightyear'></span> | Shae Carnahan | Rexburg Idaho</a> 
+        </p>
+        <p class='highlighted'>Last updated: <span id='lastupdated'></span></p>
     </footer>
 </body>
 </html>
