--- a/html/calculatorproject.html
+++ b/html/calculatorproject.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css"/>
     <link rel="stylesheet" href="../css/normalize.css"/>
+    <link rel="stylesheet" href="../css/index.css"/>
+    <script src="../javascript/updatedpage.js"></script>
+
     <title>Calculator Project</title>
 </head>
-<body>
+<body class="pdf">
     <header>
-        <h1>Calculator Application</h1>
+        <h1>Calculator Project</h1>
     </header>
 <main>
     <embed src="../projects/class-shae-carnahan-calculator-project-final.pdf" type="application/pdf" />
 </main>
 <footer>
-    <!-- this is a footer -->
+    <p class='copyright'>&copy; <span id='copyrightyear'></span> | Shae Carnahan | Rexburg Idaho</a> 
+    </p>
+    <p class='highlighted'>Last updated: <span id='lastupdated'></span></p>
 </footer>
 </body>
 </html> 
