fixing my paths

--- a/html/shaecarnahan.html
+++ b/html/shaecarnahan.html
@@ -66,10 +66,10 @@
             <ul>
                 <li>
                     <li>
-                        <a href="/javascriptprojects/mealplanner/final.html" target="_blank">Meal Planner</a>
+                        <a href="../javascriptprojects/mealplanner/final.html" target="_blank">Meal Planner</a>
                     </li>
                     <li>
-                        <a href="/javascriptprojects/enrollstudents/week4.html" target="_blank">Enrolling Students</a>
+                        <a href="../javascriptprojects/enrollstudents/week4.html" target="_blank">Enrolling Students</a>
                     </li>
                 </li>
             </ul>
