--- a/html/loupcounty.html
+++ b/html/loupcounty.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/index.css"/>
     <script src="../javascript/updatedpage.js"></script>
 
-    <title>Document</title>
+    <title>Loup County Webpage</title>
 </head>
 <body class="pdf">
     <header>
