--- a/javascriptprojects/mealplanner/final.html
+++ b/javascriptprojects/mealplanner/final.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/javascriptprojects/mealplanner/final.js" defer></script>
-    <link rel="stylesheet" href="/javascriptprojects/mealplanner/final.css">
+    <script src="final.js" defer></script>
+    <link rel="stylesheet" href="final.css">
     <title>Meal Calendar</title>
 </head>
 <body>
