added temple inns and suites to portfolio

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             </h3>
             <ul>
                 <li>
-                    <a href="../html/calculatorproject.html" target="_blank">Calculator Project </a>
+                    <a href="/html/calculatorproject.html" target="_blank">Calculator Project </a>
                 </li>
                 <li>
-                    <a href="loupcounty.html" target="_blank">Loup County Website </a>
+                    <a href="/html/loupcounty.html" target="_blank">Loup County Website </a>
                 </li>
             </ul>
         </div>
@@ -49,7 +49,7 @@
                     <a href="https://nonprofit.shaecarnahan.com/" target="_blank">Thanksgiving Nonprofit</a>
                 </li>
                 <li>
-                    <a href="https://shaemc.github.io/semester7/finalproject/home.html" target="_blank">Temple Inns and Suites</a>
+                    <a href="/finalproject/home.html" target="_blank">Temple Inns and Suites</a>
                 </li>
                 <li>
                     <a href="https://full-curved-pheasant.glitch.me/" target="_blank">White Willow Earrings</a>
