more fixes on the main page paths

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/index.css"/>
-    <script src="/javascript/updatedpage.js"></script>
+    <script src="javascript/updatedpage.js"></script>
     <title>Shae Carnahan | Portfolio</title>
 
 </head>
@@ -33,10 +33,10 @@
             </h3>
             <ul>
                 <li>
-                    <a href="/html/calculatorproject.html" target="_blank">Calculator Project </a>
+                    <a href="html/calculatorproject.html" target="_blank">Calculator Project </a>
                 </li>
                 <li>
-                    <a href="/html/loupcounty.html" target="_blank">Loup County Website </a>
+                    <a href="html/loupcounty.html" target="_blank">Loup County Website </a>
                 </li>
             </ul>
         </div>
@@ -49,7 +49,7 @@
                     <a href="https://nonprofit.shaecarnahan.com/" target="_blank">Thanksgiving Nonprofit</a>
                 </li>
                 <li>
-                    <a href="/finalproject/home.html" target="_blank">Temple Inns and Suites</a>
+                    <a href="finalproject/home.html" target="_blank">Temple Inns and Suites</a>
                 </li>
                 <li>
                     <a href="https://full-curved-pheasant.glitch.me/" target="_blank">White Willow Earrings</a>
@@ -66,7 +66,7 @@
             <ul>
                 <li>
                     <li>
-                        <a href="../javascriptprojects/mealplanner/final.html" target="_blank">Meal Planner</a>
+                        <a href="javascriptprojects/mealplanner/final.html" target="_blank">Meal Planner</a>
                     </li>
                 </li>
             </ul>
